--- a/FeedPet/templates/pet/pet_detail.html
+++ b/FeedPet/templates/pet/pet_detail.html
@@ -9,10 +9,10 @@
 {% block content %}
 
 <div class="ts relaxed grid">
-    <div class="seven wide column">
+    <div class="eight wide column">
         <img class="ts medium image" src="{{ pet.image.url }}">
     </div>
-    <div class="seven wide column">
+    <div class="eight wide column">
         <table class="ts very basic table">
             <tbody>
                 <tr>
