嵌入hotel 地圖 ＆ 修改update_pet可修改更多資訊 ＆ 修改讀取指示器

--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -158,6 +158,12 @@
                 </div>
                 <!-- 點心條 -->
 
+                <!-- 讀取指示器 -->
+                <div class="ts active inverted dimmer" id="loading">
+                    <div class="ts text loader">讀取中</div>
+                </div>
+                <!-- 讀取指示器 -->
+
                 {% block header %}{% endblock header %}
                 {% block content %}{% endblock content %}
 
