--- a/FeedPet/templates/feed/feed_detail.html
+++ b/FeedPet/templates/feed/feed_detail.html
@@ -10,21 +10,21 @@
 <div class="ts relaxed grid">
     <div class="six wide column">
         {% if feed.fitem == '罐頭' %}
-        <img class="ts medium bordered rounded image" src="{% static 'images/feed/罐頭.jpg' %}">
+        <img class="ts medium rounded image" src="{% static 'images/feed/罐頭.jpg' %}">
         {% elif feed.fitem == '潔牙骨' %}
-        <img class="ts medium bordered rounded image" src="{% static 'images/feed/潔牙骨.jpg' %}">
+        <img class="ts medium rounded image" src="{% static 'images/feed/潔牙骨.jpg' %}">
         {% elif feed.fitem == '輔助食品' %}
-        <img class="ts medium bordered rounded image" src="{% static 'images/feed/輔助食品.jpg' %}">
+        <img class="ts medium rounded image" src="{% static 'images/feed/輔助食品.jpg' %}">
         {% elif feed.fitem == '零食' %}
-        <img class="ts medium bordered rounded image" src="{% static 'images/feed/零食.jpg' %}">
+        <img class="ts medium rounded image" src="{% static 'images/feed/零食.jpg' %}">
         {% elif feed.fitem == '乾飼糧' %}
-        <img class="ts medium bordered rounded image" src="{% static 'images/feed/乾飼糧.jpg' %}">
+        <img class="ts medium rounded image" src="{% static 'images/feed/乾飼糧.jpg' %}">
         {% elif feed.fitem == '生鮮、冷凍' %}
-        <img class="ts medium bordered rounded image" src="{% static 'images/feed/生鮮、冷凍.jpg' %}">
+        <img class="ts medium rounded image" src="{% static 'images/feed/生鮮、冷凍.jpg' %}">
         {% elif feed.fitem == '半溼性飼糧' %}
-        <img class="ts medium bordered rounded image" src="{% static 'images/feed/半溼性飼糧.jpg' %}">
+        <img class="ts medium rounded image" src="{% static 'images/feed/半溼性飼糧.jpg' %}">
         {% else %}
-        <img class="ts medium bordered rounded image" src="{% static 'images/feed/其他.jpg' %}">
+        <img class="ts medium rounded image" src="{% static 'images/feed/其他.jpg' %}">
         {% endif %}
     </div>
     <div class="ten wide column">
