--- a/FeedPet/templates/pet/add_pet.html
+++ b/FeedPet/templates/pet/add_pet.html
@@ -45,7 +45,7 @@
         </div>
 
         <div class="field">
-            <label>是否結紮</label>
+            <label>結紮</label>
             <div class="ts checkboxes">
                 <div class="ts radio checkbox">
                     <input id="yes" type="radio" name="ligation" value="Yes">
