--- a/FeedPet/templates/hotel/hotel.html
+++ b/FeedPet/templates/hotel/hotel.html
@@ -42,7 +42,8 @@
     {% comment %} 串接地圖api start {% endcomment %}
     <div class="thirteen wide column">
         {% comment %} 預計地圖放置位置之後可以把background-color的設定刪掉 {% endcomment %}
-        <div class="ts embed" style="width:100%;height:400px;background-color:#223344" data-url="https://goo.gl/GKpzom" data-icon="map"></div>
+        <div class="ts embed" data-url="https://goo.gl/GKpzom" data-icon="map"></div>
+        <!-- <div class="ts embed" style="width:100%;height:400px;background-color:#223344" data-url="https://goo.gl/GKpzom" data-icon="map"></div> -->
         <button class="ts info labeled" data-tooltip-position="bottom center"
             data-tooltip="顯示該旅館資訊 旅館名稱 旅館地址 旅館聯絡方式">          
          <a href="{% url 'hotel:hotel_detail' %}">某個旅館</a> 
