--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
 
+    <link rel="shortcut icon" href="#" />
+
     <style type="text/css">
         a.title-link:hover {
             color: #34b2db !important;
@@ -83,11 +85,19 @@
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
-                        <a class="item" href="{% url 'master:profile' %}">個人資料</a>
-                        <a class="item">最愛飼料</a>
-                        <a class="item">最愛旅館</a>
+                        <a class="item" href="{% url 'master:profile' %}">
+                            <i class="user icon"></i>個人資料
+                        </a>
+                        <a class="item">
+                            <i class="like icon"></i>最愛飼料
+                        </a>
+                        <a class="item">
+                            <i class="home icon"></i>最愛旅館
+                        </a>
                         <div class="section divider"></div>
-                        <a class="item" onclick="showDimmer_logout()">登出</a>
+                        <a class="item" onclick="showDimmer_logout()">
+                            <i class="sign out icon"></i>登出
+                        </a>
                     </div>
                 </div>
                 {% else %}
@@ -165,6 +175,7 @@
                 <!-- 讀取指示器 -->
 
                 {% block header %}{% endblock header %}
+                <div class="ts divider"></div>
                 {% block content %}{% endblock content %}
 
                 <!-- / the end of articles -->
@@ -196,11 +207,14 @@
         // index subtitle
         const slogans = ["安安你好！ 這裡是FeedPet", "這是一個寵物餵食紀錄與推薦網站", "趕快登入加入你的寵物吧", "快點喔！！！"];
     </script>
-    <script src="{% static 'js/slogan.js' %}"></script>
-    <script src="{% static 'js/index.js' %}"></script>
-    <script src="{% static 'js/mypet.js' %}"></script>
-    <script src="{% static 'js/feed.js' %}"></script>
-    <script src="{% static 'js/hotel.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/slogan.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/index.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/mypet.js' %}"></script>
+    <script>
+        var user = "{{user.id}}"
+    </script>
+    <script type="text/javascript" src="{% static 'js/feed.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/hotel.js' %}"></script>
 </body>
 
 </html>
