--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -88,7 +88,7 @@
                         <a class="item" href="{% url 'master:profile' %}">
                             <i class="user icon"></i>個人資料
                         </a>
-                        <a class="item">
+                        <a class="item" href="{% url 'feed:my_favor_feed' %}">
                             <i class="like icon"></i>最愛飼料
                         </a>
                         <a class="item">
@@ -175,7 +175,7 @@
                 <!-- 讀取指示器 -->
 
                 {% block header %}{% endblock header %}
-                <div class="ts divider"></div>
+                <div class="ts section divider"></div>
                 {% block content %}{% endblock content %}
 
                 <!-- / the end of articles -->
