--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -9,16 +9,23 @@
     <title>FeedPet</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- tocas ui -->
+    <script src="https://hpcslag.github.io/hexo-theme-morgan/demo/js/tocas.js"></script>
     <link rel="stylesheet" href="https://hpcslag.github.io/hexo-theme-morgan/demo/css/tocas.css">
     <link rel="stylesheet" href="https://hpcslag.github.io/hexo-theme-morgan/demo/css/animate.css">
     <link rel="stylesheet" href="https://hpcslag.github.io/hexo-theme-morgan/demo/css/style.css">
 
+    <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    <script src="https://hpcslag.github.io/hexo-theme-morgan/demo/js/tocas.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
+    <!-- datatable -->
     <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
+
+    <!-- Chosen v1.8.2 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.min.css" rel="stylesheet"/>
 
     <link rel="shortcut icon" href="#" />
 
