--- a/FeedPet/templates/feed/feed.html
+++ b/FeedPet/templates/feed/feed.html
@@ -213,6 +213,6 @@
 </div>
 
 <button class="ts button" onclick="location.href='/feed/feed_list'">查詢所有飼料</button>
-<button class="ts button" onclick="location.href='/feed/feeding_record'">查詢餵食紀錄</button>
+<button class="ts button" onclick="location.href='/mypet/feeding_record'">查詢餵食紀錄</button>
 
 {% endblock content %}
