--- a/FeedPet/templates/feed/feed_list.html
+++ b/FeedPet/templates/feed/feed_list.html
@@ -8,10 +8,10 @@
 {% block content %}
 
 <!-- <button class="ts button" onclick="location.href='/feed/import_feed'">匯入飼料</button> -->
-<table class="ts very basic table" id="feed_table">
+<table class="ts table" id="feed_table">
     <thead>
         <tr>
-            <th class="one wide">最愛</th>
+            <th class="one wide center aligned">最愛</th>
             <th class="one wide">編號</th>
             <th class="four wide">名稱</th>
             <th class="two wide">項目</th>
