--- a/FeedPet/templates/feed/feed_recommendation.html
+++ b/FeedPet/templates/feed/feed_recommendation.html
@@ -8,10 +8,10 @@
 
 {% block content %}
 
-<table class="ts very basic table">
+<table class="ts table">
     <thead>
         <tr>
-            <th class="one wide">最愛</th>
+            <th class="one wide center aligned">最愛</th>
             <th class="one wide">編號</th>
             <th class="four wide">名稱</th>
             <th class="two wide">項目</th>
