--- a/FeedPet/templates/pet/feeding_record.html
+++ b/FeedPet/templates/pet/feeding_record.html
@@ -9,121 +9,67 @@
 
 <div id="first" class="ts top attached tabbed menu">
     {% for pet in pets %}
-    {% if forloop.first %}
-    <a class="active item" data-tab="{{ pet.petName }}">{{ pet.petName }}</a>
-    {% else %}
-    <a class="item" data-tab="{{ pet.petName }}">{{ pet.petName }}</a>
-    {% endif %}
+    <a class="{% if forloop.first %}active {% endif %}item" data-tab="{{ pet.petName }}">{{ pet.petName }}</a>
     {% endfor %}
 </div>
 
 {% for pet in pets %}
-{% if forloop.first %}
-<div data-tab="{{ pet.petName }}" class="ts active bottom attached tab segment">
-    <!-- <div class="ts relaxed grid">
-    </div> -->
+<div data-tab="{{ pet.petName }}" class="{% if forloop.first %}active {% endif %}ts bottom attached tab segment">
     <p>{{ pet.petName }}</p>
-
-    <table class="ts table">
-        <thead>
-            <tr>
-                <th class="one wide">編號</th>
-                <th>飼料名</th>
-                <th class="two wide">餵食時間</th>
-                <th class="two wide">飼料的分量(g)</th>
-                <th class="two wide">水量</th>
-                <th class="one wide"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>
-                    <select data-placeholder="Your Favorite Football Team" class="chosen-select" tabindex="5">
-                        <option value="" disabled selected>選擇一個飼料</option>
-                        {% for feed in feeds %}
-                        <option value="{{ feed.fname }}">{{ feed.fname }}</option>
-                        {% endfor %}
-                    </select>
-                </td>
-                <td>2019-11-30</td>
-                <td>100</td>
-                <td>100</td>
-                <td>
-                    <button class="ts icon button negative">
-                        <i class="delete icon"></i>
-                    </button>
-                </td>
-            </tr>
-            <form class="ts form">
+    <div class="ts relaxed grid">
+        <table class="ts table">
+            <thead>
                 <tr>
-                    <td></td>
-                    <td> <input type="text"></td>
-                    <td>
-                        <div id="showDate"></div>
-                    </td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td>
-                        <button class="ts icon button positive">
-                            <i class="add icon"></i>
-                        </button>
-                    </td>
+                    <th class="two wide">編號</th>
+                    <th class="five wide">飼料名稱</th>
+                    <th class="three wide">餵食時間</th>
+                    <th class="two wide">餵食量(g)</th>
+                    <th class="two wide">水量</th>
+                    <th class="two wide">動作</th>
                 </tr>
-            </form>
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                <form method="post" action="{% url 'master:mypet/feeding_record' %}">
+                    <tr>
+                        <td>-</td>
+                        <td>
+                            <select required class="selectpicker" name="feed_id" data-live-search="true" size=10>
+                                <!-- <option value="">選擇飼料</option> -->
+                                {% for feed in feeds %}
+                                <option value="{{ feed.id }}">{{ feed.fname }}</option>
+                                {% endfor %}
+                            </select>
+                        </td>
+                        <td>
+                            <div class="ts fluid input">
+                                <input type="date" name="feed_time" required="required"
+                                    value="{{ today|date:'Y-m-d' }}" />
+                            </div>
+                        </td>
+                        <td>
+                            <div class="ts fluid input">
+                                <input type="number" name="feed_amount" required="required" value="100">
+                            </div>
+                        </td>
+                        <td>
+                            <div class="ts fluid input">
+                                <input type="number" name="feed_water" required="required" value="100">
+                            </div>
+                        </td>
+                        <td>
+                            <!-- <button class="ts icon button negative">
+                            <i class="delete icon"></i>
+                        </button> -->
+                            <button class="ts icon button positive">
+                                <i class="add icon"></i>
+                            </button>
+                        </td>
+                    </tr>
+                </form>
+            </tbody>
+        </table>
+    </div>
 </div>
-{% else %}
-<div data-tab="{{ pet.petName }}" class="ts bottom attached tab segment">
-    <!-- <div class="ts relaxed grid">
-    </div> -->
-    <p>{{ pet.petName }}</p>
-
-    <table class="ts table">
-        <thead>
-            <tr>
-                <th class="one wide">編號</th>
-                <th>飼料名</th>
-                <th class="two wide">餵食時間</th>
-                <th class="two wide">飼料的分量(g)</th>
-                <th class="two wide">水量</th>
-                <th class="one wide"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>飼料1</td>
-                <td>2019-11-30</td>
-                <td>100</td>
-                <td>100</td>
-                <td>
-                    <button class="ts icon button negative">
-                        <i class="delete icon"></i>
-                    </button>
-                </td>
-            </tr>
-            <form class="ts form">
-                <tr>
-                    <td></td>
-                    <td> <input type="text"></td>
-                    <td>
-                        <div id="showDate"></div>
-                    </td>
-                    <td><input type="text"></td>
-                    <td><input type="text"></td>
-                    <td>
-                        <button class="ts icon button positive">
-                            <i class="add icon"></i>
-                        </button>
-                    </td>
-                </tr>
-            </form>
-        </tbody>
-    </table>
-</div>
-{% endif %}
 {% endfor %}
 
 {% endblock content %}
