--- a/FeedPet/templates/hotel/hotel.html
+++ b/FeedPet/templates/hotel/hotel.html
@@ -10,11 +10,11 @@
     {% comment %} 旅館篩選條件 start {% endcomment %}
    
     <div class="three wide column">
-        <div class="ts form">
+        <form class="ts form" method="post" action="/hotel/">
              <div class="field">
                    
                 <label>選擇地區</label>
-                <select>
+                <select name="region">
                     {% for Hotel in unit %}   
                     <option>{{Hotel.district}}</option>
                     {% endfor %}
@@ -24,7 +24,7 @@
 
             <div class="field">
                 <label>選擇旅館評鑑</label>
-                <select>
+                <select name="star">
                         {% for Hotel in unit1 %}   
                         <option>{{Hotel.rank}}</option>
                         {% endfor %}
@@ -32,23 +32,38 @@
             </div>
             <button class="ts button">送出</button>
 
-
-        </div>
-
-    
+        </form>
     </div>
     {% comment %} 旅館篩選條件 end {% endcomment %}
    
     {% comment %} 串接地圖api start {% endcomment %}
-    <div class="thirteen wide column">
+    <!-- <div class="thirteen wide column">
         {% comment %} 預計地圖放置位置之後可以把background-color的設定刪掉 {% endcomment %}
-        <div class="ts embed" style="width:100%;height:400px;background-color:#223344" data-url="https://goo.gl/GKpzom" data-icon="map"></div>
+        <div class="ts embed" style="width:100%;height:400px;"></div>
+        
+              
         <button class="ts info labeled" data-tooltip-position="bottom center"
             data-tooltip="顯示該旅館資訊 旅館名稱 旅館地址 旅館聯絡方式">          
-         <a href="{% url 'hotel:hotel_detail' %}">某個旅館</a> 
+         <a href="{% url 'hotel:hotel_detail' 1 %}">某個旅館</a> 
         </button>
-    </div>
-    {% comment %} 串接地圖api end {% endcomment %}    
-</div>
+    </div> -->
+    <div class="thirteen wide column " id="map"></div>
+    <script type="text/javascript">
 
+    var map;
+    function initMap() {
+      map = new google.maps.Map(document.getElementById('map'), {
+        center: {lat: 25.04, lng: 121.512},
+        zoom: 18
+      });
+    }
+
+    </script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCx7qnrkFTjPP4nwQFqjP6BW4RbWYMXGik&callback=initMap">
+    </script>
+    {% comment %} 串接地圖api end {% endcomment %} 
+          
+</div>
+  
 {% endblock content %}
