--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
 
     <!-- bootstrap-select -->
-    <link rel="stylesheet"
+    <!-- <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/css/bootstrap-select.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.9/dist/js/bootstrap-select.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -34,7 +34,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 
     <link rel="shortcut icon" href="#" />
 
@@ -185,9 +185,9 @@
                 <!-- 點心條 -->
 
                 <!-- 讀取指示器 -->
-                <div class="ts active inverted dimmer" id="loading">
+                <!-- <div class="ts active inverted dimmer" id="loading">
                     <div class="ts text loader">讀取中</div>
-                </div>
+                </div> -->
                 <!-- 讀取指示器 -->
 
                 {% block header %}{% endblock header %}
