--- a/FeedPet/templates/hotel/hotel.html
+++ b/FeedPet/templates/hotel/hotel.html
@@ -24,7 +24,13 @@
         </form>
     </div>
 
-    <div id='map' style='width: 700px; height: 300px;'></div>
+    <div id='map' style='width: 700px; height: 300px;'>
+        <div class='quakeInfo'>
+            <div><strong>旅館名稱:</strong> <span id='hotel_name'></span></div>
+            <div><strong>評鑑:</strong> <span id='rank'></span></div>
+            <botton>加入我的最愛</botton>
+        </div>
+    </div>
 
 </div>
 {% endblock content %}
