--- a/FeedPet/templates/hotel/hotel.html
+++ b/FeedPet/templates/hotel/hotel.html
@@ -26,9 +26,10 @@
 
     <div id='map' style='width: 700px; height: 300px;'>
         <div class='quakeInfo'>
-            <div><strong>旅館名稱:</strong> <span id='hotel_name'></span></div>
-            <div><strong>評鑑:</strong> <span id='rank'></span></div>
-            <botton>加入我的最愛</botton>
+            <div><strong style="font-size:15px">旅館名稱:</strong> <span id='hotel_name' style="font-size:15px"></span>
+            </div>
+            <div><strong style="font-size:15px">評鑑:</strong> <span id='rank' style="font-size:15px"></span></div>
+            <botton style="color: red;font-size:25px">加入我的最愛:</botton>
         </div>
     </div>
 
