--- a/FeedPet/templates/hotel/hotel.html
+++ b/FeedPet/templates/hotel/hotel.html
@@ -14,24 +14,21 @@
 
                 <label>選擇地區</label>
                 <select id="chose_district" name="chose_district">
+                    <option value="" disabled selected>選擇地區</option>
                     {% for Hotel in district %}
                     <option>{{Hotel.district}}</option>
                     {% endfor %}
                 </select>
-
+                <br>
+                <br>
+                <div><strong style="font-size:15px;">旅館名稱:</strong> <span id='hotel_name'></span></div>
+                <div><strong style="font-size:15px;">評鑑:</strong> <span id='rank'></span></div>
+                <botton id="show_detail" style="color: red;font-size:15px;">顯示細節
+                </botton>
             </div>
-
         </form>
     </div>
 
-    <div id='map' style='width: 700px; height: 300px;'>
-        <div class='quakeInfo'>
-            <div><strong style="font-size:15px">旅館名稱:</strong> <span id='hotel_name' style="font-size:15px"></span>
-            </div>
-            <div><strong style="font-size:15px">評鑑:</strong> <span id='rank' style="font-size:15px"></span></div>
-            <botton style="color: red;font-size:25px">加入我的最愛:</botton>
-        </div>
-    </div>
-
+    <div id='map' style='width: 700px; height: 500px;'></div>
 </div>
 {% endblock content %}
