--- a/FeedPet/templates/pet/mypet.html
+++ b/FeedPet/templates/pet/mypet.html
@@ -28,7 +28,7 @@
             </div>
         </a>
         <div class="ts fluid stackable buttons">
-            <button class="ts button" onclick="location.href='/mypet/feeding_record'">餵食紀錄</button>
+            <button class="ts button" onclick="location.href='/mypet/feeding_record/{{ pet.id }}'">餵食紀錄</button>
         </div>
     </div>
     {% endfor %}
