--- a/FeedPet/templates/hotel/hotel.html
+++ b/FeedPet/templates/hotel/hotel.html
@@ -15,14 +15,16 @@
                 <label>選擇地區</label>
                 <select id="chose_district" name="chose_district">
                     <option value="" disabled selected>選擇地區</option>
-                    {% for Hotel in district %}
-                    <option>{{Hotel.district}}</option>
+                    {% for hotel in hotels %}
+                    <option>{{hotel.district}}</option>
                     {% endfor %}
                 </select>
                 <br>
                 <br>
                 <div><strong style="font-size:15px;">旅館名稱:</strong> <span id='hotel_name'></span></div>
+                <br>
                 <div><strong style="font-size:15px;">評鑑:</strong> <span id='rank'></span></div>
+                <br>
                 <botton id="show_detail" style="color: red;font-size:15px;">顯示細節
                 </botton>
             </div>
