更改餵食查詢路徑

--- a/FeedPet/templates/feed/feed.html
+++ b/FeedPet/templates/feed/feed.html
@@ -22,7 +22,7 @@
         </div>
     </a>
 
-    <a class="ts info raised card" href="/mypet/feeding_record">
+    <a class="ts info raised card" href="/mypet/">
         <div class="content">
             <div class="header">查詢餵食紀錄</div>
             <div class="description">
