--- a/FeedPet/templates/hotel/hotel.html
+++ b/FeedPet/templates/hotel/hotel.html
@@ -25,6 +25,12 @@
                 <br>
                 <div><strong style="font-size:15px;">評鑑:</strong> <span id='rank'></span></div>
                 <br>
+                <div><strong style="font-size:15px;">負責人:</strong> <span id='incharge'></span></div>
+                <br>
+                <div><strong style="font-size:15px;">電話:</strong> <span id='phone'></span></div>
+                <br>
+                <div><strong style="font-size:15px;">地址:</strong> <span id='address'></span></div>
+                <br>
                 <botton id="show_detail" style="color: red;font-size:15px;">顯示細節
                 </botton>
             </div>
