幫美惠擦屁股 改完hotel

--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -97,7 +97,7 @@
                         <a class="item" href="{% url 'feed:my_favor_feed' %}">
                             <i class="like icon"></i>最愛飼料
                         </a>
-                        <a class="item">
+                        <a class="item" href="{% url 'hotel:my_favor_hotel' %}">
                             <i class="home icon"></i>最愛旅館
                         </a>
                         <div class="section divider"></div>
