--- a/FeedPet/templates/feed/feed_detail.html
+++ b/FeedPet/templates/feed/feed_detail.html
@@ -28,11 +28,11 @@
         {% endif %}
     </div>
     <div class="ten wide column">
-        <table class="ts very basic table" id="feed_detail">
+        <table class="ts very basic table">
             <tbody>
                 <tr>
                     <td class="three wide">名稱</td>
-                    <td class="thirty wide">{{ feed.fname }}</td>
+                    <td class="thirteen wide">{{ feed.fname }}</td>
                 </tr>
                 <tr>
                     <td>項目</td>
