忘了改hotel一些東西啦幹

--- a/FeedPet/templates/hotel/hotel_detail.html
+++ b/FeedPet/templates/hotel/hotel_detail.html
@@ -11,11 +11,11 @@
     <tbody>
         <tr>
             <td class="three wide">名稱</td>
-            <td class="thirty wide">{{ hotel.hname }}</td>
+            <td class="thirty wide">{{ hotel.full_name }}</td>
         </tr>
         <tr>
-            <td>完整名稱</td>
-            <td>{{ hotel.full_name }}</td>
+            <td>字號</td>
+            <td>{{ hotel.hname }}</td>
         </tr>
         <tr>
             <td>評鑑</td>
