--- a/FeedPet/templates/hotel/my_favor_hotel.html
+++ b/FeedPet/templates/hotel/my_favor_hotel.html
@@ -28,7 +28,7 @@
                 </button>
             </td>
             <td> {{ favor_hotel.hotel.id }}</td>
-            <td>{{ favor_hotel.hotel.hname }}</td>
+            <td>{{ favor_hotel.hotel.full_name }}</td>
             <td>{{ favor_hotel.hotel.rank }}</td>
             <td>{{ favor_hotel.hotel.district }}</td>
             <td>{{ favor_hotel.hotel.address }}</td>
