--- a/FeedPet/templates/hotel/hotel.html
+++ b/FeedPet/templates/hotel/hotel.html
@@ -19,24 +19,50 @@
                     <option>{{hotel.district}}</option>
                     {% endfor %}
                 </select>
-                <br>
-                <br>
                 <div><strong style="font-size:15px;">旅館名稱:</strong> <span id='hotel_name'></span></div>
-                <br>
-                <div><strong style="font-size:15px;">評鑑:</strong> <span id='rank'></span></div>
-                <br>
-                <div><strong style="font-size:15px;">負責人:</strong> <span id='incharge'></span></div>
-                <br>
-                <div><strong style="font-size:15px;">電話:</strong> <span id='phone'></span></div>
-                <br>
-                <div><strong style="font-size:15px;">地址:</strong> <span id='address'></span></div>
-                <br>
-                <botton id="show_detail" style="color: red;font-size:15px;">顯示細節
-                </botton>
+                <div><strong style="font-size:15px;">評鑑:</strong> <span id='hotel_name'></span></div>
+                <button id='show_detail'><a href="{% url 'hotel:hoteldetail' %}"></a>顯示細節</button>
             </div>
         </form>
     </div>
 
     <div id='map' style='width: 700px; height: 500px;'></div>
+    <table class="ts celled table" style=width:200px;top:-12px;left:890px;position:absolute;>
+        <thead>
+            <tr>
+                <th colspan="3">
+                    旅館資料
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><strong style="font-size:15px;">旅館名稱:</strong> <span id='hotel_name'></span></td>
+            </tr>
+            <tr>
+                <td align="center"><strong style="font-size:15px;">評鑑:</strong> <span id='rank'></span></td>
+            </tr>
+            <tr>
+                <td align="center"><strong style="font-size:15px;">負責人:</strong> <span id='incharge'></span></td>
+            </tr>
+            <tr>
+                <td align="center"><strong style="font-size:15px;">電話:</strong> <span id='phone'></span></td>
+            </tr>
+            <tr>
+                <td align="center"><strong style="font-size:15px;">地址:</strong> <span id='address'></span></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="2">
+                    <div class="ts right floated small primary labeled icon button">
+                        <i class="heart icon"></i>
+                        <a href="{% url 'hotel:hotel_favorite' %}" align="center">加到我的最愛</a>
+                    </div>
+                </th>
+            </tr>
+        </tfoot>
+        <script src="http://apps.bdimg.com/libs/jquery/1.11.1/jquery.min.js"></script>
+    </table>
 </div>
 {% endblock content %}
