修正寵物餵食紀錄路徑

--- a/FeedPet/templates/pet/pet_detail.html
+++ b/FeedPet/templates/pet/pet_detail.html
@@ -45,7 +45,7 @@
                 </tr>
             </tbody>
         </table>
-        <button class="ts button" onclick="location.href='/feed/feeding_record'">餵食紀錄</button>
+        <button class="ts button" onclick="location.href='/mypet/feeding_record/{{pet.id}}'">餵食紀錄</button>
         <button class="ts positive button" onclick="location.href='/mypet/update_pet_detail/{{pet.id}}'">修改</button>
         <button class="ts negative button" onclick="showDimmer_delpet()">刪除寵物</button>
     </div>
