--- a/FeedPet/templates/pet/feeding_record.html
+++ b/FeedPet/templates/pet/feeding_record.html
@@ -31,7 +31,7 @@
         </thead>
         <tbody>
 
-            <form method="post" action="/mypet/feeding_record/{{ pets.id }}">
+            <form method="post" action="/mypet/feeding_record/{{ pets.id }}/">
                 <tr>
                     <td>-</td>
                     <td>
