Modify the document and base.html

--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -198,10 +198,10 @@
             <br>
             <div class="ts large center aligned header">
                 <div class="smaller sub header">
-                    軟體工程期末專案<br>
-                    /admin<br>
-                    acount : zachary<br>
-                    password : 123
+                    Software Engineering Project<br>
+                    Go to Admin: 127.0.0.1:8000/admin<br>
+                    Account: w7002470024<br>
+                    Password: 123
                 </div>
             </div>
             <br>
