change the icon

--- a/FeedPet/templates/base.html
+++ b/FeedPet/templates/base.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8">
 
     <title>FeedPet</title>
+    <link REL="SHORTCUT ICON" HREF="{% static 'images/favicon.ico' %}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- tocas ui -->
